# raw-stdio

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  msrv.yml  unit-tests.yml
raw-stdio/: Cargo.toml
raw-stdio/src/: lib.rs  unix.rs  windows.rs
tests/: Cargo.toml  expected.txt  input.txt
