[package]
name = "raw-stdio"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
repository = "https://github.com/mahkoh/raw-stdio"
license = "MIT OR Apache-2.0"
description = "Cross-platform, unbuffered, direct STDIO access"
keywords = ["cli", "terminal"]
categories = ["command-line-utilities", "api-bindings", "os"]
readme = "../README.md"
